@@ -9,7 +9,7 @@ Sys.ps.cmd <- function() {
     if(is.na(rel)) rel <- 3000
     if(rel >= 2006) "/bin/ps w" ## Linux kernel >= 2.6 (this is true for Ubuntu!)
     else if(rel >= 2002) "/bin/ps --width 1000" ## Linux >= 2.2
-    else structure("/bin/ps w",type="BSD")
+    else struct("/bin/ps w", type="BSD")
   }
   else if(sys == "SunOS") "/usr/bin/ps"
   else {
